2008-12-23  Jon Beniston <jon@beniston.com>

	* NEWS: Record that support for LM32 has been added.
	* Makefile.am: Add LM32 object files and dependencies.
	* Makefile.in: Regenerate.
	* configure.in: Indicate LM32 uses cgen.
	* configure: Regenerate.
	* configure.tgt: Add LM32 target.
	* config/tc-lm32.c: New file.
	* config/tc-lm32.h: New file.
	* doc/Makefile.am: Add c-lm32.texi to CPU_DOCS.
	* doc/Makefile.in: Regenerate.
	* doc/all.texi: Add LM32 as CPU of interest.
	* doc/as.texinfo: Add LM32 dependent features link.
	* doc/c-lm32.texi: New file.

2008-12-23  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (match_template): Changed to return
	 const template *.  Handle i.swap_operand for 3 operands.
	 (build_vex_prefix): Take const template *.  Swap operand for
	 2-byte VEX prefix if possible.
	 (md_assemble): Updated.
	 (build_modrm_byte): Handle RegMem bit for SSE2AVX.

2008-12-23  Anatoly Sokolov  <aesok@post.ru>

	* config/tc-avr.c (mcu_types): Add attiny87, attiny327, atmega4hvd,
	atmega8hvd, atmega16hvb, atmega32hvb, atmega64c1, atmega16m1, 
	atmega64m1, atmega32u6, atmega128rfa1,  at90pwm81, at90scr100, 
	m3000f, m3000s and m3001b devices.
	* doc/c-avr.texi: Likewise.

2008-12-23  Nick Clifton  <nickc@redhat.com>

	* NEWS :Remove mention of STT_IFUNC support.
	* config/obj-elf.c (obj_elf_type): Remove STT_IFUNC support.
	* doc/as.texinfo: Remove mention of STT_IFUNC support.

2008-12-21  Hans-Peter Nilsson  <hp@axis.com>

	* config/tc-cris.c (s_cris_dtpoff): New function.
	(md_pseudo_table): Add "dtpoffd".

2008-12-20  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (parse_insn): Optimize ".s" handling.

2008-12-20  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (_i386_insn): Add swap_operand.
	(parse_insn): Handle ".s".
	(match_template): Handle swap_operand.

	* doc/c-i386.texi: Document .s suffix.

2008-12-20  Hans-Peter Nilsson  <hp@axis.com>

	* config/tc-cris.c (cris_process_instruction): Handle